--- a/ClothBazar.Web/Views/Product/Create.cshtml
+++ b/ClothBazar.Web/Views/Product/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Create Product</h2>
-<form method="post">
+<form method="post" id="createProduct">
     <label>Name</label>
     <input name="Name" />
     <br />
@@ -14,5 +14,22 @@
     <label>Price</label>
     <input name="Price" />
     <br />
-    <button type="submit">Submit</button>
+    <button type="button" id="saveBtn">Submit</button>
 </form>
+<script>
+    $('#saveBtn').click(function () {
+        var searchValue = $('#searchTxt').val();
+        $.ajax({
+            url: '/Product/Create',
+            data: $('#createProduct').serialize(),
+            type:'post'
+        }
+        ).done(function (response) {
+            $('#tableContainer').html(response);
+            $('#actionContainer').html('');
+        }
+        ).fail(function () {
+            alert('fail');
+        });
+    });
+</script>
