--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+                /**/
+
+                /**/
+
+                ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
@@ -9,4 +13,7 @@
     @{
         Html.RenderAction("ProductTable");
     }
-    </div>
+</div>
+<div id="actionContainer">
+
+</div>
