--- a/ClothBazar.Web/Views/Home/Index.cshtml
+++ b/ClothBazar.Web/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@using ClothBazar.Web.ViewModels
+@model ClothBazar.Web.ViewModels.HomeViewModel
 @{
     ViewBag.Title = "Home Page";
+    var firstCategory = Model.Categoryies.Where(cat => cat.ImageUrl != null).First();
 }
 
 <!-- SLIDER -->
@@ -190,9 +192,9 @@
                     <div class="item data-effect-item">
                         <div class="inner">
                             <div class="thumb">
-                                <img src="~/Content//image-box/imgbox-1-375x500.jpg" alt="Image">
+                                <img src="@firstCategory.ImageUrl" alt="Image">
                                 <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For Men’s</a>
+                                    <a href="#" class="themesflat-button bg-white width-150">@firstCategory.Name</a>
                                 </div>
                                 <div class="overlay-effect bg-color-1"></div>
                             </div>
