--- a/ClothBazar.Web/Views/Product/Index.cshtml
+++ b/ClothBazar.Web/Views/Product/Index.cshtml
@@ -1,19 +1,20 @@
 ﻿
 @{
-                /**/
+    /**/
 
-                /**/
+    /**/
 
-                ViewBag.Title = "Index";
+    ViewBag.Title = "Index";
 }
+<div class="container">
+    <h2>Index</h2>
+    <div id="tableContainer">
 
-<h2>Index</h2>
-<div id="tableContainer">
-
-    @{
-        Html.RenderAction("ProductTable");
-    }
-</div>
-<div id="actionContainer">
-
+        @{
+            Html.RenderAction("ProductTable");
+        }
+    </div>
+    <hr />
+    <div id="actionContainer">
+    </div>
 </div>
