--- a/ClothBazar.Web/Views/Home/Index.cshtml
+++ b/ClothBazar.Web/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
 @model ClothBazar.Web.ViewModels.HomeViewModel
 @{
     ViewBag.Title = "Home Page";
-    var firstCategory = Model.Categoryies.Where(cat => cat.ImageUrl != null).First();
+    var firstCategory = Model.FeaturedCategoryies[0];
+    var secondCategory = Model.FeaturedCategoryies[1];
+    var thirdCategory = Model.FeaturedCategoryies[2];
+    var fourthCategory = Model.FeaturedCategoryies[3];
 }
 
 <!-- SLIDER -->
@@ -191,6 +194,8 @@
                 <div class="flat-image-box style-1 data-effect div-h22 clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
+                            @if (firstCategory != null)
+                            {
                             <div class="thumb">
                                 <img src="@firstCategory.ImageUrl" alt="Image">
                                 <div class="elm-btn">
@@ -198,6 +203,7 @@
                                 </div>
                                 <div class="overlay-effect bg-color-1"></div>
                             </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -206,26 +212,32 @@
                 <div class="flat-image-box style-1 row2 data-effect clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="~/Content//image-box/imgbox-1-375x240.jpg" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For Kid’s</a>
+                            @if (secondCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@secondCategory.ImageUrl" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@secondCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
+                            }
                             </div>
-                        </div>
                     </div>
 
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="~/Content//image-box/imgbox-2-375x240.jpg" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">accessories</a>
+                            @if (thirdCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@thirdCategory.ImageUrl" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@thirdCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
+                            }
                             </div>
-                        </div>
                     </div>
                 </div>
             </div><!-- /.col-md-4 -->
@@ -233,14 +245,17 @@
                 <div class="flat-image-box style-1 data-effect div-h20 clearfix">
                     <div class="item data-effect-item">
                         <div class="inner">
-                            <div class="thumb">
-                                <img src="~/Content//image-box/imgbox-2-375x500.jpg" alt="Image">
-                                <div class="elm-btn">
-                                    <a href="#" class="themesflat-button bg-white width-150">For woMen’s</a>
+                            @if (fourthCategory != null)
+                            {
+                                <div class="thumb">
+                                    <img src="@fourthCategory.ImageUrl" alt="Image">
+                                    <div class="elm-btn">
+                                        <a href="#" class="themesflat-button bg-white width-150">@fourthCategory.Name</a>
+                                    </div>
+                                    <div class="overlay-effect bg-color-1"></div>
                                 </div>
-                                <div class="overlay-effect bg-color-1"></div>
+                            }
                             </div>
-                        </div>
                     </div>
                 </div>
             </div><!-- /.col-md-4 -->
