--- a/ClothBazar.Web/Views/Category/Create.cshtml
+++ b/ClothBazar.Web/Views/Category/Create.cshtml
@@ -35,7 +35,7 @@
             }
             $.ajax({
                 type: 'post',
-                url: '/Shared/UploadImage',
+                url:'@Url.Action("UploadImage", "Shared")',// '/Shared/UploadImage',
                 data: formData,
                 dataType: 'json',
                 contentType: false,
