--- a/ClothBazar.Web/Views/Product/ProductTable.cshtml
+++ b/ClothBazar.Web/Views/Product/ProductTable.cshtml
@@ -2,15 +2,20 @@
 @{
     ViewBag.Title = "ProductTable";
 }
+
+<link href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" type="text/css" rel="stylesheet" />
+<script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+
 <div>
     <form method="post">
         <input name="Search" id="searchTxt" />
         <button type="button" id="searchBtn">Search</button>
     </form>
     <button id="newBtn">New</button>
+    <button id="resetBtn">Reset</button>
 </div>
 
-<table class="table table-striped">
+<table id="productsTable" class="table table-striped">
     <thead>
         <tr>
             <th>Product Name</th>
@@ -44,8 +49,17 @@
         }
     </tbody>
 </table>
+@*<div>
+    <button id="priviousRecords">Privious</button>
+    <button id="nextRecords">Next</button>
+</div>*@
 
 <script>
+   
+    $(document).ready(function () {
+        $('#productsTable').DataTable();
+    });
+
     $('#searchBtn').click(function () {
         var searchValue = $('#searchTxt').val();
         $.ajax({
@@ -62,7 +76,7 @@
     $('#newBtn').click(function () {
         var searchValue = $('#searchTxt').val();
         $.ajax({
-            url: '/Product/Create',
+            url: '@Url.Action("Create", "Product")',// '/Product/Create',
         }
         ).done(function (response) {
             $('#actionContainer').html(response);
@@ -73,7 +87,7 @@
     });
     $('.editBtn').click(function () {
         $.ajax({
-            url: '/Product/Edit',
+            url: '@Url.Action("Edit", "Product")',//'/Product/Edit',
             data: { id: $(this).attr('data-id') }
         }).done(function (response) {
             $('#actionContainer').html(response);
@@ -93,7 +107,7 @@
             .then((willDelete) => {
                 if (willDelete) {
                     $.ajax({
-                        url: '/Product/Delete',
+                        url: '@Url.Action("Delete", "Product")',//'/Product/Delete',
                         data: { id: $(this).attr('data-id') },
                         type: 'post'
                     }).done(function (response) {
@@ -105,7 +119,7 @@
                     //).fail(function () {
                     //    alert('fail');
                     //});
-                   
+
                 }
                 //else {
                 //    swal("Your imaginary file is safe!");
